[tool.poetry]
name = "pplab"
version = "0.1.0"
description = ""
authors = ["maxlevytskyi2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.6"
Flask = "^2.2.2"
waitress = "^2.1.2"
SQLAlchemy = "1.4.22"
alembic = "^1.8.1"
pyodbc = "^4.0.34"
pymssql = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
