[tool.poetry]
name = "pplab"
version = "0.1.0"
description = ""
authors = ["maxlevytskyi2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.6"
Flask = "^2.2.2"
waitress = "^2.1.2"
SQLAlchemy = "1.4.22"
alembic = "^1.8.1"
pyodbc = "^4.0.34"
pymssql = "^2.2.5"
mysqlclient = "^2.1.1"
marshmallow = "^3.19.0"
marshmallow-sqlalchemy = "^0.28.1"
Flask-Bcrypt = "^1.0.1"
Flask-HTTPAuth = "^4.7.0"
pytest = "^7.2.0"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
